Revert "Revert "Add API Route and Handler For Topic Claim Button""
